--- a/book/book_template.html
+++ b/book/book_template.html
@@ -29,6 +29,9 @@
       </div>
     </div>
 
+    <div class="blank">
+    </div>
+
     <div class="plan_pages">
       {% for d in days %}
       <div class="event_day">
