Added schedule and ident adjustments

--- a/book/book_template.html
+++ b/book/book_template.html
@@ -29,7 +29,12 @@
       </div>
     </div>
 
-    <div class="blank">
+    <div class="info_page">
+      <div class="contact">
+        <b> Kontakt z organizatorami </b> <br/>
+        Ania Szymanek: 784 908 985 <br/>
+        Rafał Kaleta: 517 417 554
+      </div>
     </div>
 
     <div class="plan_pages">
