--- a/identifier/identifier_template.html
+++ b/identifier/identifier_template.html
@@ -17,6 +17,9 @@
           21.02.2019 - 24.02.2019
         </div>
         <div class="name"> {{ pref.first_name }} {{ pref.last_name }} </div>
+        {% if pref.organization %}
+        <div class="organization"> {{ pref.organization }} </div>
+        {% endif %}
       </div>
       <div class="cover flip">
         <div class="zosia_logo"> <img src="../identifier/zosia.png"> </div>
@@ -25,6 +28,9 @@
           21.02.2019 - 24.02.2019
         </div>
         <div class="name"> {{ pref.first_name }} {{ pref.last_name }} </div>
+        {% if pref.organization %}
+        <div class="organization"> {{ pref.organization }} </div>
+        {% endif %}
       </div>
       <div class="meals">
         <div class="column">
