--- a/book/book_template.html
+++ b/book/book_template.html
@@ -50,10 +50,13 @@
               {{ e.startTime }} {{ e.endTime }}
             </div>
             <div class="{% if e.sponsored %} lecturer_and_title_sponsored {% else %} lecturer_and_title {% endif %}">
+              <span class="title"> 
               {% if e.sponsored == "silver" or e.sponsored == "gold" %}
-                <div class="recommended"> Wykład polecany </div>
+                <u> {{ e.title }} </u>
+              {% else %}
+                {{ e.title }}
               {% endif %}
-              <span class="title"> {{ e.title }} </span>
+              </span>
               <br/>
               {% if e.lecturer %}
                 <em>
@@ -62,7 +65,7 @@
                     i {{ e.coauthor }}
                   {% endif %}
                   {% if e.sponsored %}
-                    z firmy {{ e.organization }}
+                    z firmy <b> {{ e.organization }} </b>
                   {% endif %}
                 </em>
               {% endif %}
@@ -102,7 +105,7 @@
                 i {{ e.coauthor }}
               {% endif %}
             {% if e.sponsored %}
-              z firmy {{ e.organization }}
+              z firmy <b> {{ e.organization }} </b>
             {% endif %}
             </em>
           </div>
@@ -123,12 +126,13 @@
       </div>
       <div class="content">
         <div class="sponsor_title"> Sponsorzy </div>
-        <div class="ppg_logo"> </div>
         <div class="fingo_logo"> </div>
+        <div class="tsg_logo"> </div>
         <div class="siemens_logo"> </div>
-        <div class="av_logo"> </div>
         <div class="qed_logo"> </div>
+        <div class="av_logo"> </div>
         <div class="quantup_logo"> </div>
+        <div class="ppg_logo"> </div>
       </div>
       <div class="bottom">
       </div>
