uatrakcyjnienie wizualne pobliskich miejsc

--- a/book/book_template.html
+++ b/book/book_template.html
@@ -125,82 +125,79 @@
       {% endfor %}
     </div>
 
-    <div class="fun_pages">
+    <div class="fun_pages locations-page">
       <h2> Pobliskie miejsca warte odwiedzenia </h2>
       <h3> Restauracje: </h3>
-      <ul>
-        <li>
-            Manufaktura (4.3/5) $$ - 58m / 1min - Konstytucji 3-ego Maja 57
-        </li>
-        <li>
-            Restauracja u Petiego (4.7/5) $$ - 190m / 3min - Parkowa 10
-        </li>
-        <li>
-            Restauracja KOLOROWA (4.6/5) - 150m / 2min - hotel Kolorowa, Konstytucji 3-go Maja 58
-        </li>
-        <li>
-            Central Bar (4.4/5) $$ - 240m / 3min - Konstytucji 3-ego Maja 49
-        </li>
-        <li>
-            Pierogowo (4.6/5) $ - 230m / 4min - Piastowska 1
-        </li>
-        <li>
-            Oro Cavallo Restauracja-Pizzeria-Noclegi (4.5/5) $$ - 220m / 4min - Konstytucji 3 Maja 67
-        </li>
-        <li>
-            Chata Karkonoska (4.4/5) $$ - 450m / 7min - Wolna 4             
-        </li>
+      <ul class="locations restaurants">
+        {% for r in places.restaurants %}
+        <li class="location restaurant">
+          <div class="row location-title"><span class="location-name">{{ r.name }}</span> <span class="location-distance">{{ r.distance }}/{{ r.time }}</span></div>
+          <div class="row location-footer smaller">
+
+            <span class="location-badge">{{ r.badge }}</span> 
+            
+            <span class="location-address">{{ r.address }}</span>
+          </div>
+        </li> 
+        {% endfor %}
       </ul>
 
-      <h3> Atrakcje: </h3>
-
-      <ul>
-      <li>
-      Karkonoskie Tajemnice (4.5/5) - 60m / 1min - Mickiewicza 1A
-      Karkonoskie Tajemnice, to podziemna, multimedialna ekspozycja przedstawiająca legendarny i historyczny świat Karkonoszy oraz ich władcy Ducha Gór, 
-      Ulgowy - 17 zł, Normalny - 21 zł
-        </li>
-        <li>
-      Prywatne Muzeum Konsol Gier Video (4.8/5) - 180m / 3min - Mickiewicza 11,
-      Muzeum gier - 16zł, Muzeum Lego - 18zł, Oba muzea - 28zł
-        </li>
-        <li>
-      Centrum Karpacza (4.4/5) - 400m / 4m - Konstytucji 3-ego Maja,
-      Urocze historyczne centrum miasta, idealne miejsce do spacerów.
-        </li>
-        <li>
-      Zapora na Łomnicy w Karpaczu (4.6/5) - 650m / 10min - Główny Szlak Sudecki, Punkt widokowy
-        </li>
-        <li>
-      Muzeum Zabawek w Karpaczu (4.5/5) - 1.3km / 14min - Kolejowa 3
-        </li>
-        <li>
-      Kościół Wang (4.6/5) - 3km / 50min - Na Śnieżkę 8, 
-      Drewniany ewangelicki kościół z 12 wieku, przeniesiony do Karpacza z Norwegii w 1842 roku.
-        </li>
-        <li>
-      Hotel Gołębiewski - aquapark (4.4/5) - 2.5 km / 37 min - Karkonoska 14
-        </li>
-      </ul>
 
       <h3> Szczyty: </h3>
-      <ul>
+      <ul class="locations hiking">
 
-        <li>
-Śnieżka (4.7/5) - 7.6km / 2h 29min
-        </li>
-        <li>
-Skalny Stół (4.9/5) - 5.8km / 1h 47min
-        </li>
-        <li>
-Saneczkowa Góra (4.3/5) - 1.5km / 22min - Myśliwska 13
-        </li>
+        {% for h in places.hiking %}
+        <li class="location hiking">
+          <div class="row location-title">
+            <span class="location-name boldier">{{ h.name }}</span>
+            <div class="location-effort">
+              <span class="location-distance">{{ h.distance }}</span>
+              <span class="location-time">{{ h.time }}</span>    
+              <span class="location-height">{{ h.height }}</span>
+            </div>
+          </div>
+        </li> 
+        {% endfor %}
       </ul>
+      <br><br><br><br>
+    </div>
+
+    <div class="fun_pages locations-page">
+      <h3> Atrakcje: </h3>
+
+      <ul class="locations attractions">
+
+        {% for a in places.attractions %}
+        <li class="location attraction">
+          <div class="row location-title">
+            <span class="location-name">{{ a.name }}</span>
+            <span class="location-distance">{{ a.distance }}/{{ a.time }}</span>
+          </div>
+          <div class="col location-content">
+            <span class="location-decscription smaller">
+              {{a.description}}
+            </span>
+          </div>
+          <div class="row location-footer smaller">
+            <div class="col">
+              {% if a.pricing %}
+              <ul>
+                {% for price in a.pricing %}
+                  <li>{{ price }}</li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            </div>            
+            <span class="location-address">{{ a.address }}</span>
+          </div>
+        </li> 
+        {% endfor %}
+      </ul>
+
     </div>
 
     <div class="blank"> 
     </div>
-    <div class="blank"> </div>
 
     <div class="title_page">
       <div class="top">
