Fixes after merge and fixing hours

--- a/book/book_template.html
+++ b/book/book_template.html
@@ -100,7 +100,7 @@
           </div>
           {% endif %}
           <div>
-            {{ d.name }} {{ e.startTime }} | {{ e.duration }}min
+            {{ d.session_name }} {{ e.startTime }} | {{ e.duration }}min
           </div>
           <div class="lecturer">
             <em> 
