--- a/book/book_template.html
+++ b/book/book_template.html
@@ -126,34 +126,34 @@
     </div>
 
     <div class="fun_pages locations-page">
-      <h2> Pobliskie miejsca warte odwiedzenia </h2>
-      <h3> Restauracje: </h3>
+      <h2 class="places-title"> Pobliskie miejsca warte odwiedzenia </h2>
+      <h3 class="places-subtitle"> Restauracje: </h3>
       <ul class="locations restaurants">
         {% for r in places.restaurants %}
         <li class="location restaurant">
-          <div class="row location-title"><span class="location-name">{{ r.name }}</span> <span class="location-distance">{{ r.distance }}/{{ r.time }}</span></div>
-          <div class="row location-footer smaller">
-
-            <span class="location-badge">{{ r.badge }}</span> 
-            
-            <span class="location-address">{{ r.address }}</span>
+          <div class="row flex-split fw-400">
+            <span class="name">{{ r.name }}</span>
+            <span class="distance">{{ r.distance }}/{{ r.time }}</span>
+          </div>
+          <div class="row flex-start fw-200 grayout">            
+            <span class="address">{{ r.address }}</span>
           </div>
         </li> 
         {% endfor %}
       </ul>
 
 
-      <h3> Szczyty: </h3>
+      <h3 class="places-subtitle"> Szczyty: </h3>
       <ul class="locations hiking">
 
         {% for h in places.hiking %}
         <li class="location hiking">
           <div class="row location-title">
-            <span class="location-name boldier">{{ h.name }}</span>
-            <div class="location-effort">
-              <span class="location-distance">{{ h.distance }}</span>
-              <span class="location-time">{{ h.time }}</span>    
-              <span class="location-height">{{ h.height }}</span>
+            <span class="name fw-400">{{ h.name }}</span>
+            <div class="row flex-end fw-200">
+              <span class="distance">{{ h.distance }}</span>
+              <span class="time">{{ h.time }}</span>    
+              <span class="height">{{ h.height }}</span>
             </div>
           </div>
         </li> 
@@ -163,33 +163,34 @@
     </div>
 
     <div class="fun_pages locations-page">
-      <h3> Atrakcje: </h3>
+      <h3 class="places-subtitle"> Atrakcje: </h3>
 
       <ul class="locations attractions">
 
         {% for a in places.attractions %}
         <li class="location attraction">
-          <div class="row location-title">
-            <span class="location-name">{{ a.name }}</span>
-            <span class="location-distance">{{ a.distance }}/{{ a.time }}</span>
+          <div class="row flex-split fw-400">
+            <span>{{ a.name }}</span>
+            <span>{{ a.distance }}/{{ a.time }}</span>
           </div>
-          <div class="col location-content">
-            <span class="location-decscription smaller">
+          <div class="row fw-200 grayout">
+            <span>{{ a.address }}</span>
+          </div>
+          <div class="row">
+            <span>
               {{a.description}}
             </span>
           </div>
-          <div class="row location-footer smaller">
-            <div class="col">
-              {% if a.pricing %}
-              <ul>
+          {% if a.pricing %}
+            <div class="row">
+              <span>
+                cennik:   
                 {% for price in a.pricing %}
-                  <li>{{ price }}</li>
+                  {{ price }}, 
                 {% endfor %}
-              </ul>
-              {% endif %}
-            </div>            
-            <span class="location-address">{{ a.address }}</span>
-          </div>
+              </span>
+            </div>
+          {% endif %}  
         </li> 
         {% endfor %}
       </ul>
