--- a/book/book_template.html
+++ b/book/book_template.html
@@ -125,23 +125,10 @@
       {% endfor %}
     </div>
 
-    <div class="fun_pages locations-page">
-      <h2 class="places-title"> Pobliskie miejsca warte odwiedzenia </h2>
-      <h3 class="places-subtitle"> Restauracje: </h3>
-      <ul class="locations restaurants">
-        {% for r in places.restaurants %}
-        <li class="location restaurant">
-          <div class="row flex-split fw-400">
-            <span class="name">{{ r.name }}</span>
-            <span class="distance">{{ r.distance }} / {{ r.time }}</span>
-          </div>
-          <div class="row flex-start fw-200 grayout">            
-            <span class="address">{{ r.address }}</span>
-          </div>
-        </li> 
-        {% endfor %}
-      </ul>
 
+    <div class="fun_pages locations-page">
+
+      <h2 class="places-title"> Pobliskie miejsca warte odwiedzenia </h2>
 
       <h3 class="places-subtitle"> Szczyty: </h3>
       <ul class="locations hiking">
@@ -159,10 +146,28 @@
         </li> 
         {% endfor %}
       </ul>
-      <br><br><br><br>
+
+      <h3 class="places-subtitle"> Restauracje: </h3>
+      <ul class="locations restaurants">
+        {% for r in places.restaurants %}
+        <li class="location restaurant">
+          <div class="row flex-split fw-400">
+            <span class="name">{{ r.name }}</span>
+            <span class="distance">{{ r.distance }} / {{ r.time }}</span>
+          </div>
+          <div class="row flex-start fw-200 grayout">            
+            <span class="address">{{ r.address }}</span>
+          </div>
+        </li> 
+        {% endfor %}
+      </ul>
+
+
     </div>
 
     <div class="fun_pages locations-page">
+
+
       <h3 class="places-subtitle"> Atrakcje: </h3>
 
       <ul class="locations attractions">
@@ -184,10 +189,7 @@
           {% if a.pricing %}
             <div class="row">
               <span>
-                cennik:   
-                {% for price in a.pricing %}
-                  {{ price }}, 
-                {% endfor %}
+                cennik: {{ a.pricing | join(', ') }}
               </span>
             </div>
           {% endif %}  
@@ -196,6 +198,8 @@
       </ul>
 
     </div>
+
+
 
     <div class="title_page">
       <div class="top">
