--- a/book/book_template.html
+++ b/book/book_template.html
@@ -126,49 +126,10 @@
     </div>
 
 
+
     <div class="fun_pages locations-page">
 
       <h2 class="places-title"> Pobliskie miejsca warte odwiedzenia </h2>
-
-      <h3 class="places-subtitle"> Szczyty: </h3>
-      <ul class="locations hiking">
-
-        {% for h in places.hiking %}
-        <li class="location hiking">
-          <div class="row flex-split location-title">
-            <span class="name fw-400">{{ h.name }}</span>
-            <div class="row fw-200">
-              <span class="distance">{{ h.distance }}</span>
-              <span class="time">{{ h.time }}</span>    
-              <span class="height">{{ h.height }}</span>
-            </div>
-          </div>
-        </li> 
-        {% endfor %}
-      </ul>
-
-      <h3 class="places-subtitle"> Restauracje: </h3>
-      <ul class="locations restaurants">
-        {% for r in places.restaurants %}
-        <li class="location restaurant">
-          <div class="row flex-split fw-400">
-            <span class="name">{{ r.name }}</span>
-            <span class="distance">{{ r.distance }} / {{ r.time }}</span>
-          </div>
-          <div class="row flex-start fw-200 grayout">            
-            <span class="address">{{ r.address }}</span>
-          </div>
-        </li> 
-        {% endfor %}
-      </ul>
-
-
-    </div>
-
-    <div class="fun_pages locations-page">
-
-
-      <h3 class="places-subtitle"> Atrakcje: </h3>
 
       <ul class="locations attractions">
 
@@ -199,6 +160,42 @@
 
     </div>
 
+    <div class="fun_pages locations-page">
+
+      <h3 class="places-subtitle"> Restauracje </h3>
+      <ul class="locations restaurants">
+        {% for r in places.restaurants %}
+        <li class="location restaurant">
+          <div class="row flex-split fw-400">
+            <span class="name">{{ r.name }}</span>
+            <span class="distance">{{ r.distance }} / {{ r.time }}</span>
+          </div>
+          <div class="row flex-start fw-200 grayout">            
+            <span class="address">{{ r.address }}</span>
+          </div>
+        </li> 
+        {% endfor %}
+      </ul>
+
+      <h3 class="places-subtitle"> Szczyty </h3>
+      <ul class="locations hiking">
+
+        {% for h in places.hiking %}
+        <li class="location hiking">
+          <div class="row flex-split location-title">
+            <span class="name fw-400">{{ h.name }}</span>
+            <div class="row fw-200">
+              <span class="distance">{{ h.distance }}</span>
+              <span class="time">{{ h.time }}</span>    
+              <span class="height">{{ h.height }}</span>
+            </div>
+          </div>
+        </li> 
+        {% endfor %}
+      </ul>
+
+
+    </div>
 
 
     <div class="title_page">
