Add Zosia 2022 files

--- a/book/book_template.html
+++ b/book/book_template.html
@@ -1,219 +1,217 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link href="../book/book.css" rel="stylesheet">
-    <title>Board ticket</title>
-    <meta name="description" content="Board ticket">
-  </head>
 
-  <body>
-    <div class="title_page">
-      <div class="top">
+<head>
+  <meta charset="utf-8">
+  <link href="../book/book.css" rel="stylesheet">
+  <title>Board ticket</title>
+  <meta name="description" content="Board ticket">
+</head>
+
+<body>
+  <div class="title_page">
+    <div class="top">
+    </div>
+    <div class="content">
+      <div class="zosia_title">
+        Zimowy Obóz Studentów Informatyki A
       </div>
-      <div class="content">
-        <div class="zosia_title">
-          Zimowy Obóz Studentów Informatyki A
-        </div>
-        <div class="zosia_logo"> <img src="../book/zosia.png"> </div>
-        <div class="date_and_place">
-          Karpacz <br>
-          27.02. - 1.03.2020
-        </div>
-        <div class="logo_wrapper">
-          <div class="uwr_logo"> <img src="../book/logo_UWr.svg"> </div>
-          <div class="ksi_logo"> <img src="../book/logo_KSI.svg"> </div>
-        </div>
+      <div class="zosia_logo"> <img src="../book/zosia.png"> </div>
+      <div class="date_and_place">
+        Przesieka <br>
+        3.03. - 6.03.2022
       </div>
-      <div class="bottom">
+      <div class="logo_wrapper">
+        <div class="uwr_logo"> <img src="../book/logo_UWr.svg"> </div>
+        <div class="ksi_logo"> <img src="../book/logo_KSI.svg"> </div>
       </div>
     </div>
-
-    <div class="info_page">
-      <div class="contact">
-        <b> Kontakt z organizatorami </b> <br/>
-        Ania Szymanek: 784 908 985 <br/>
-        Rafał Kaleta: 517 417 554
-      </div>
+    <div class="bottom">
     </div>
+  </div>
 
-    <div class="plan_pages">
-      {% for d in days %}
-      <div class="event_day">
-        <div class="day_name">
-          {{ d.name }}
-        </div>
-        <div class="event_table">
+  <div class="info_page">
+    <div class="contact">
+      <b> Kontakt z organizatorami </b> <br />
+      Ania Szymanek: 784 908 985 <br />
+      Rafał Kaleta: 517 417 554
+    </div>
+  </div>
+
+  <div class="plan_pages">
+    {% for d in days %}
+    <div class="event_day">
+      <div class="day_name">
+        {{ d.name }}
+      </div>
+      <div class="event_table">
         {% for e in d.events %}
-          <div class="event">
-            <div class="hour">
-              {{ e.startTime }} {{ e.endTime }}
-            </div>
-            <div class="{% if e.sponsored %} lecturer_and_title_sponsored {% else %} lecturer_and_title {% endif %}">
-              <span class="title"> 
-              {% if e.sponsored == "silver" or e.sponsored == "gold" %}
-                <u> {{ e.title }} </u>
-              {% else %}
-                {{ e.title }}
-              {% endif %}
-              </span>
-              <br/>
-              {% if e.lecturer %}
-                <em>
-                  {{ e.lecturer }}
-                  {% if e.coauthor %}
-                    i {{ e.coauthor }}
-                  {% endif %}
-                  {% if e.sponsored %}
-                    z firmy <b> {{ e.organization }} </b>
-                  {% endif %}
-                </em>
-              {% endif %}
-            </div>
+        <div class="event">
+          <div class="hour">
+            {{ e.startTime }} {{ e.endTime }}
           </div>
-        {% endfor %}
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-
-    <div class="abstract_pages">
-      {% for d in days %}
-      <div class="abstract_day">
-      {% for e in d.events %}
-        {% if e.type == "LECTURE" %}
-        <div class="abstract">
-          {% if e.sponsored %}
-            {% if e.sponsored == "silver" or e.sponsored == "gold" %}
-              <div class="recommended"> Wykład polecany </div>
-            {% endif %}
-            <div class="title_sponsored">
+          <div class="{% if e.sponsored %} lecturer_and_title_sponsored {% else %} lecturer_and_title {% endif %}">
+            <span class="title">
               {% if e.sponsored == "silver" or e.sponsored == "gold" %}
-                <u> {{ e.title }} </u>
+              <u> {{ e.title }} </u>
               {% else %}
-                {{ e.title }}
-              {% endif %}
-            </div>
-          {% else %}
-          <div class="title">
               {{ e.title }}
-          </div>
-          {% endif %}
-          <div>
-            {{ d.session_name }} {{ e.startTime }} | {{ e.duration }}min
-          </div>
-          <div class="lecturer">
-            <em> 
-            {{ e.lecturer }} 
-              {% if e.coauthor %}
-                i {{ e.coauthor }}
               {% endif %}
-            {% if e.sponsored %}
+            </span>
+            <br />
+            {% if e.lecturer %}
+            <em>
+              {{ e.lecturer }}
+              {% if e.coauthor %}
+              i {{ e.coauthor }}
+              {% endif %}
+              {% if e.sponsored %}
               z firmy <b> {{ e.organization }} </b>
-            {% endif %}
+              {% endif %}
             </em>
+            {% endif %}
           </div>
-          <div class="body">
-            {% for p in e.abstract %}
-              <p> {{ p }} </p>
-            {% endfor %}
-          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
+  <div class="abstract_pages">
+    {% for d in days %}
+    <div class="abstract_day">
+      {% for e in d.events %}
+      {% if e.type == "LECTURE" %}
+      <div class="abstract">
+        {% if e.sponsored %}
+        {% if e.sponsored == "silver" or e.sponsored == "gold" %}
+        <div class="recommended"> Wykład polecany </div>
+        {% endif %}
+        <div class="title_sponsored">
+          {% if e.sponsored == "silver" or e.sponsored == "gold" %}
+          <u> {{ e.title }} </u>
+          {% else %}
+          {{ e.title }}
+          {% endif %}
+        </div>
+        {% else %}
+        <div class="title">
+          {{ e.title }}
         </div>
         {% endif %}
+        <div>
+          {{ d.session_name }} {{ e.startTime }} | {{ e.duration }}min
+        </div>
+        <div class="lecturer">
+          <em>
+            {{ e.lecturer }}
+            {% if e.coauthor %}
+            i {{ e.coauthor }}
+            {% endif %}
+            {% if e.sponsored %}
+            z firmy <b> {{ e.organization }} </b>
+            {% endif %}
+          </em>
+        </div>
+        <div class="body">
+          {% for p in e.abstract %}
+          <p> {{ p }} </p>
+          {% endfor %}
+        </div>
+      </div>
+      {% endif %}
       {% endfor %}
-      </div>
+    </div>
+    {% endfor %}
+  </div>
+
+
+
+  <div class="fun_pages locations-page">
+
+    <h2 class="places-title"> Pobliskie miejsca warte odwiedzenia </h2>
+
+    <ul class="locations attractions">
+
+      {% for a in places.attractions %}
+      <li class="location attraction">
+        <div class="row flex-split fw-400">
+          <span>{{ a.name }}</span>
+          <span>{{ a.distance }} / {{ a.time }}</span>
+        </div>
+        <div class="row fw-200 grayout">
+          <span>{{ a.address }}</span>
+        </div>
+        <div class="row">
+          <span>
+            {{a.description}}
+          </span>
+        </div>
+        {% if a.pricing %}
+        <div class="row">
+          <span>
+            cennik: {{ a.pricing | join(', ') }}
+          </span>
+        </div>
+        {% endif %}
+      </li>
       {% endfor %}
+    </ul>
+
+  </div>
+
+  <div class="fun_pages locations-page">
+
+    <h3 class="places-subtitle"> Restauracje </h3>
+    <ul class="locations restaurants">
+      {% for r in places.restaurants %}
+      <li class="location restaurant">
+        <div class="row flex-split fw-400">
+          <span class="name">{{ r.name }}</span>
+          <span class="distance">{{ r.distance }} / {{ r.time }}</span>
+        </div>
+        <div class="row flex-start fw-200 grayout">
+          <span class="address">{{ r.address }}</span>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+
+    <h3 class="places-subtitle"> Szczyty </h3>
+    <ul class="locations hiking">
+
+      {% for h in places.hiking %}
+      <li class="location hiking">
+        <div class="row flex-split location-title">
+          <span class="name fw-400">{{ h.name }}</span>
+          <div class="row fw-200">
+            <span class="distance">{{ h.distance }}</span>
+            <span class="time">{{ h.time }}</span>
+            <span class="height">{{ h.height }}</span>
+          </div>
+        </div>
+      </li>
+      {% endfor %}
+    </ul>
+
+
+  </div>
+
+
+  <div class="title_page">
+    <div class="top">
     </div>
-
-
-
-    <div class="fun_pages locations-page">
-
-      <h2 class="places-title"> Pobliskie miejsca warte odwiedzenia </h2>
-
-      <ul class="locations attractions">
-
-        {% for a in places.attractions %}
-        <li class="location attraction">
-          <div class="row flex-split fw-400">
-            <span>{{ a.name }}</span>
-            <span>{{ a.distance }} / {{ a.time }}</span>
-          </div>
-          <div class="row fw-200 grayout">
-            <span>{{ a.address }}</span>
-          </div>
-          <div class="row">
-            <span>
-              {{a.description}}
-            </span>
-          </div>
-          {% if a.pricing %}
-            <div class="row">
-              <span>
-                cennik: {{ a.pricing | join(', ') }}
-              </span>
-            </div>
-          {% endif %}  
-        </li> 
-        {% endfor %}
-      </ul>
-
+    <div class="content">
+      <div class="sponsor_title"> Sponsorzy </div>
+      <div class="fingo_logo"> </div>
+      <div class="tsg_logo"> </div>
+      <div class="siemens_logo"> </div>
+      <div class="antmicro_logo"> </div>
     </div>
-
-    <div class="fun_pages locations-page">
-
-      <h3 class="places-subtitle"> Restauracje </h3>
-      <ul class="locations restaurants">
-        {% for r in places.restaurants %}
-        <li class="location restaurant">
-          <div class="row flex-split fw-400">
-            <span class="name">{{ r.name }}</span>
-            <span class="distance">{{ r.distance }} / {{ r.time }}</span>
-          </div>
-          <div class="row flex-start fw-200 grayout">            
-            <span class="address">{{ r.address }}</span>
-          </div>
-        </li> 
-        {% endfor %}
-      </ul>
-
-      <h3 class="places-subtitle"> Szczyty </h3>
-      <ul class="locations hiking">
-
-        {% for h in places.hiking %}
-        <li class="location hiking">
-          <div class="row flex-split location-title">
-            <span class="name fw-400">{{ h.name }}</span>
-            <div class="row fw-200">
-              <span class="distance">{{ h.distance }}</span>
-              <span class="time">{{ h.time }}</span>    
-              <span class="height">{{ h.height }}</span>
-            </div>
-          </div>
-        </li> 
-        {% endfor %}
-      </ul>
-
-
+    <div class="bottom">
     </div>
+  </div>
+</body>
 
-
-    <div class="title_page">
-      <div class="top">
-      </div>
-      <div class="content">
-        <div class="sponsor_title"> Sponsorzy </div>
-        <div class="fingo_logo"> </div>
-        <div class="tsg_logo"> </div>
-        <div class="siemens_logo"> </div>
-        <div class="qed_logo"> </div>
-        <div class="av_logo"> </div>
-        <div class="quantup_logo"> </div>
-        <div class="ppg_logo"> </div>
-      </div>
-      <div class="bottom">
-      </div>
-    </div>
-  </body>
 </html>
-
