--- a/book/book_template.html
+++ b/book/book_template.html
@@ -19,10 +19,10 @@
       <div class="zosia_logo"> <img src="../book/zosia.png"> </div>
       <div class="date_and_place">
         Przesieka <br>
-        3.03. - 6.03.2022
+        3 - 6 marca 2022
       </div>
       <div class="logo_wrapper">
-        <div class="uwr_logo"> <img src="../book/logo_UWr.svg"> </div>
+        <div class="uwr_logo"> <img src="../book/logo_UWr.png"> </div>
         <div class="ksi_logo"> <img src="../book/logo_KSI.svg"> </div>
       </div>
     </div>
@@ -33,8 +33,8 @@
   <div class="info_page">
     <div class="contact">
       <b> Kontakt z organizatorami </b> <br />
-      Ania Szymanek: 784 908 985 <br />
-      Rafał Kaleta: 517 417 554
+      Dawid Dudek: 731 649 322
+
     </div>
   </div>
 
@@ -198,6 +198,7 @@
 
   </div>
 
+  <div class="blank"></div>
 
   <div class="title_page">
     <div class="top">
