--- a/schedule/web_schedule_template.html
+++ b/schedule/web_schedule_template.html
@@ -1,200 +1,49 @@
 
-
 <style>
-
-    .card-top {
-      border-top: none;
-      border-bottom: 1px solid rgba(160,160,160,0.2);
-      font-weight: 600;
-    }
-    .flexbox {
-      display: flex;
-    }
-    .flex-center-align { 
-      justify-content: center;
-    }
-    .schedule-sponsor-logo {
-      width: 150px;
-    }
-    .golden-sponsor {
-      background-color: #f6b000 !important;
-    }
-    .silver-sponsor {
-      background-color: #c5c2c2 !important;
-    }
-    .card {
-      min-width: 450px;
-    }
-   .container, nav {
-      min-width: 550px;
-   }
-   .day-text { 
-      font-size: 34px;
-      font-weight: 400;
-      border-bottom: 1px #A0A8A4 solid;
+  .gold_sponsor_highlight > .collapsible-header {
+    background-color: #ffd700;
   }
-    
 </style>
 
 {% for d in days %}
-
-<div class="left-align day-text"> {{ d.name }}</div>
-{% for e in d.events %}
-
-{% if e.type != "LECTURE" %}
-{% elif e.sponsored == "gold" %}
-<!--Złoty-->
-<div class="row">
-    <div class="col l12 m12 s12">
-      <div class="card">
-          <div class="card-action card-top flexbox golden-sponsor">
-            <div class="col l4 m4 s4 valign-wrapper left-align">
-                {{ d.session_name }}, {{ e.startTime }} - {{ e.endTime }}
-            </div>
-            <div class="col l4 m4 s4 valign-wrapper flex-center-align">
-                Wykład Polecany
-            </div>
-            <div class="col l4 m4 s4 right-align">
-                {% if e.organization == "Fingo" %}
-                <img src="https://zosia-storage.s3.eu-central-1.amazonaws.com/logo-fingo.svg" class="schedule-sponsor-logo">
-                {% else %}
-                <img src="https://zosia-storage.s3.eu-central-1.amazonaws.com/TSG_logotyp_RED.svg" class="schedule-sponsor-logo">
-                {% endif %}
-            </div>
-          </div>
-          <div class="card-content">
-            <span class="card-title">
-            <strong>
-              {{ e.title }}
-            </strong>
-            </span>
-            {% for p in e.abstract %}
-            <p>
-               {{ p }}
-            </p>
-            {% endfor %}
-          </div>
-          <div class="card-action">
-            <strong>
-              {{ e.lecturer }} 
-              {% if e.coauthor %}
-                i {{ e.coauthor }}
-              {% endif %}
-              z firmy <b> {{ e.organization }} </b>
-            </strong>
-          </div>
-      </div>
+<h3> {{ d.name }} </h3>
+<ul class="collapsible">
+  {% for e in d.events %}
+    <li class="{{e.sponsor_highlight}}">
+      <div class="collapsible-header {% if e.type != "LECTURE" %} collapsible-disabled {% endif %}">
+        {{ e.startTime }} | {{ e.duration }}min | {{e.title}}
+        {% if e.lecturer %}
+        | {{ e.lecturer }}
+          {% if e.coauthor %}
+          i {{ e.coauthor }}
+          {% endif %}
+          {% if e.sponsored %}
+          z firmy {{ e.organization }}
+          {% endif %}
+        {% endif %}
     </div>
-</div>
-{% elif e.sponsored == "silver" %}
-
-    <!--Srebrny-->
-    <div class="row">
-       <div class="col l12 m12 s12">
-          <div class="card">
-             <div class="card-action card-top flexbox silver-sponsor">
-                <div class="col l6 m6 s6 valign-wrapper left-align">
-                  {{ d.session_name }}, {{ e.startTime }} - {{ e.endTime }}
-                </div>
-                <div class="col l6 m6 s6 valign-wrapper flex-center-align">
-                   Wykład Polecany
-                </div>
-             </div>
-             <div class="card-content">
-                <span class="card-title">
-                <strong>
-                  {{ e.title }}
-                </strong>
-                </span>
-            {% for p in e.abstract %}
-            <p>
-               {{ p }}
-            </p>
-            {% endfor %}
-             </div>
-             <div class="card-action">
-            <strong>
-              {{ e.lecturer }} 
-              {% if e.coauthor %}
-                i {{ e.coauthor }}
-              {% endif %}
-              z firmy <b> {{ e.organization }} </b>
-            </strong>
-             </div>
-          </div>
-       </div>
+    {% if e.type == "LECTURE" %}
+    <div class="collapsible-body">
+        {% for p in e.abstract %}
+        <p> {{ p }} </p>
+        {% endfor %}
     </div>
-{% elif e.sponsored == "bronze" %}
-
-    <!--Brązowy-->
-    <div class="row">
-       <div class="col l12 m12 s12">
-          <div class="card">
-             <div class="card-action card-top flexbox">
-                <div class="col l12 m12 s12 valign-wrapper left-align">
-                  {{ d.session_name }}, {{ e.startTime }} - {{ e.endTime }}
-                </div>
-             </div>
-             <div class="card-content">
-                <span class="card-title">
-                <strong>
-                  {{ e.title }}
-                </strong>
-                </span>
-            {% for p in e.abstract %}
-            <p>
-               {{ p }}
-            </p>
-            {% endfor %}
-             </div>
-             <div class="card-action">
-            <strong>
-              {{ e.lecturer }} 
-              {% if e.coauthor %}
-                i {{ e.coauthor }}
-              {% endif %}
-              z firmy <b> {{ e.organization }} </b>
-            </strong>
-             </div>
-          </div>
-       </div>
-    </div>
-
-{% else %}
-
-    <!--Żaden-->
-    <div class="row">
-       <div class="col l12 m12 s12">
-          <div class="card">
-             <div class="card-action card-top flexbox">
-                <div class="col l12 m12 s12 valign-wrapper left-align">
-                  {{ d.session_name }}, {{ e.startTime }} - {{ e.endTime }}
-                </div>
-             </div>
-             <div class="card-content">
-                <span class="card-title">
-                  {{ e.title }}
-                </span>
-            {% for p in e.abstract %}
-            <p>
-               {{ p }}
-            </p>
-            {% endfor %}
-             </div>
-             <div class="card-action">
-            <strong>
-              {{ e.lecturer }} 
-              {% if e.coauthor %}
-                i {{ e.coauthor }}
-              {% endif %}
-            </strong>
-             </div>
-          </div>
-       </div>
-    </div>
-
-{% endif %}
-{% endfor %}
+    {% endif %}
+    </li>
+  {% endfor %}
+</ul>
 {% endfor %}
 
+<script>
 
+  document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.collapsible');
+    var instances = M.Collapsible.init(elems, options);
+  });
+
+  // Or with jQuery
+
+  $(document).ready(function(){
+    $('.collapsible').collapsible();
+  });
+</script>
