--- a/identifier/identifier_template.html
+++ b/identifier/identifier_template.html
@@ -11,22 +11,22 @@
     {% for pref in prefs %}
     <div class="badge">
       <div class="cover">
-        <div class="zosia_logo"> <img src="../identifier/zosia.png"> </div>
-        <div class="caption">
-          Zimowy Obóz Studentów Informatyki <br>
-          {{ camp_date }}
-        </div>
+        <div class="zosia_logo"> <img src="../assets/zosia.png"> </div>
         <div class="name {{ pref.highlight }}"> {{ pref.first_name }} {{ pref.last_name }} </div>
         {% if pref.organization %}
         <div class="organization {{ pref.highlight }}"> {{ pref.organization }} </div>
         {% endif %}
+        <hr/>
+        <div class="caption">Zimowy Obóz Studentów Informatyki</div>
+        <div class="date">{{ camp_date }}</div>
       </div>
       <div class="cover flip">
-        <div class="zosia_logo"> <img src="../identifier/zosia.png"> </div>
+        <div class="zosia_logo"> <img src="../assets/zosia.png"> </div>
         <div class="caption">
           Zimowy Obóz Studentów Informatyki <br>
           {{ camp_date }}
         </div>
+        <hr/>
         <div class="name {{ pref.highlight }}"> {{ pref.first_name }} {{ pref.last_name }} </div>
         {% if pref.organization %}
         <div class="organization {{ pref.highlight }}"> {{ pref.organization }} </div>
